# jerryPycia

./: README.md  pyproject.toml
jerrypycia/: __init__.py  jerryPycia.py
jerrypycia/datasets/: GratefulDead.csv
tests/: test_jerrypycia.py
